--- a/index.html
+++ b/index.html
@@ -105,25 +105,25 @@
                   </ol>
                <div class="carousel-inner">
                   <div class="carousel-item">
-                     <img src="assets/fensing_1.JPG" class="d-block w-100" alt="fensing_1">
+                     <img src="assets/fensing_1.jpg" class="d-block w-100" alt="fensing_1">
                   </div>
                   <div class="carousel-item">
-                     <img src="assets/small_tool_house.JPG" class="d-block w-100" alt="small_tool_house">
+                     <img src="assets/small_tool_house.jpg" class="d-block w-100" alt="small_tool_house">
                   </div>
                   <div class="carousel-item active">
-                     <img src="assets/fensing_2.JPG" class="d-block w-100" alt="fensing_2">
+                     <img src="assets/fensing_2.jpg" class="d-block w-100" alt="fensing_2">
                   </div>
                   <div class="carousel-item">
-                     <img src="assets/stairs.JPG" class="d-block w-100" alt="stairs">
+                     <img src="assets/stairs.jpg" class="d-block w-100" alt="stairs">
                   </div>
                   <div class="carousel-item ">
-                     <img src="assets/sync_install.JPG" class="d-block w-100" alt="sync_install">
+                     <img src="assets/sync_install.jpg" class="d-block w-100" alt="sync_install">
                   </div>
                   <div class="carousel-item ">
-                     <img src="assets/yard.JPG" class="d-block w-100" alt="yard">
+                     <img src="assets/yard.jpg" class="d-block w-100" alt="yard">
                   </div>
                   <div class="carousel-item ">
-                        <img src="assets/garage_floor.JPG" class="d-block w-100" alt="yard">
+                        <img src="assets/garage_floor.jpg" class="d-block w-100" alt="yard">
                   </div>
                </div>
             </div>
@@ -134,6 +134,7 @@
             <div class="titles">
                <i class="fas fa-question-circle fa-4x icons"></i>
                <h2>ABOUT US</h2>
+               <br/>
                <p>HandyManDoEverything is a house renovation company based in Austin Texas. We specialize in making your home look and feel awesome.</p>
             </div>
          </section>
