--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
                      <img src="./assets/fensing_one.JPG" class="d-block w-100" alt="fensing_1">
                   </div>
                   <div class="carousel-item">
-                     <img src="assets/small_tool_house.JPG" class="d-block w-100" alt="small_tool_house">
+                     <img src="./assets/small_tool_house.JPG" class="d-block w-100" alt="small_tool_house">
                   </div>
                   <div class="carousel-item active">
-                     <img src="assets/fensing_two.JPG" class="d-block w-100" alt="fensing_2">
+                     <img src="./assets/fensing_two.JPG" class="d-block w-100" alt="fensing_2">
                   </div>
                   <div class="carousel-item">
-                     <img src="assets/stairs.JPG" class="d-block w-100" alt="stairs">
+                     <img src="./assets/stairs.JPG" class="d-block w-100" alt="stairs">
                   </div>
                   <div class="carousel-item ">
-                     <img src="assets/sync_install.JPG" class="d-block w-100" alt="sync_install">
+                     <img src="./assets/sync_install.JPG" class="d-block w-100" alt="sync_install">
                   </div>
                   <div class="carousel-item ">
-                     <img src="assets/yard.JPG" class="d-block w-100" alt="yard">
+                     <img src="./assets/yard.JPG" class="d-block w-100" alt="yard">
                   </div>
                   <div class="carousel-item ">
-                     <img src="assets/garage_floor.JPG" class="d-block w-100" alt="yard">
+                     <img src="./assets/garage_floor.JPG" class="d-block w-100" alt="yard">
                   </div>
                </div>
             </div>
