image fix active tag

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <div class="carousel-item">
                      <img src="./assets/small_tool_house.JPG" class="d-block w-100" alt="small_tool_house">
                   </div>
-                  <div class="carousel-item active">
+                  <div class="carousel-item">
                      <img src="./assets/fensing_two.JPG" class="d-block w-100" alt="fensing_2">
                   </div>
                   <div class="carousel-item">
