--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                   </ol>
                <div class="carousel-inner">
-                  <div class="carousel-item">
+                  <div class="carousel-item active">
                      <img src="./assets/fensing_one.JPG" class="d-block w-100" alt="fensing_1">
                   </div>
                   <div class="carousel-item">
                      <img src="./assets/small_tool_house.JPG" class="d-block w-100" alt="small_tool_house">
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item ">
                      <img src="./assets/fensing_two.JPG" class="d-block w-100" alt="fensing_2">
                   </div>
                   <div class="carousel-item">
