--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                      <img src="./assets/fensing_two.JPG" class="d-block w-100" alt="fensing_2">
                   </div>
                   <div class="carousel-item">
-                     <img src="./assets/stairs.JPG" class="d-block w-100" alt="stairs">
+                     <img src="./assets/flooring.JPG" class="d-block w-100" alt="flooring">
                   </div>
                   <div class="carousel-item ">
                      <img src="./assets/sync_install.JPG" class="d-block w-100" alt="sync_install">
