email subject fix

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                      Texas, USA
                   </div>
                </div>
-               <a href="mailto:handymandoeverything@gmail.com?Subject=Hello%20HandManDoEverything%20Team!">
+               <a href="mailto:handymandoeverything@gmail.com?Subject=Hello%20HandyManDoEverything%20Team!">
                <div class="card border-primary mb-3">
                   <div class="card-body text-primary">
                      <div class="px1">
